Add sample theme file

--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -8,6 +8,9 @@
     <title>My First Bootstrap Homepage</title>
 
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="starter-template.css" rel="stylesheet">
   </head>
 
   <body>
@@ -32,7 +35,15 @@
         </div>
       </div>
     </nav>
-    <!-- <h1>Hello, Bootstrap!</h1> -->
+
+    <div class="container">
+      <div class="starter-template">
+        <h1>Hello, Bootstrap!</h1>
+        <p class="lead">
+          This is a sample paragraph citing how awesome bootstrap is, etc.
+        </p>
+      </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
