--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -51,6 +51,10 @@
     </nav>
 
     <div class="container">
+      <div class="jumbotron">
+        <h1>Look! Bootstrap!</h1>
+      </div>
+
       <div class="starter-template">
         <h1>Hello, Bootstrap!</h1>
         <p class="lead">
