First attempt at grid columns

--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -61,6 +61,13 @@
           This is a sample paragraph citing how awesome bootstrap is, etc.
         </p>
       </div>
+      <div class="row">
+        <div class="col-xs-1"><p>1!</p></div>
+        <div class="col-xs-2"><p>2!</p></div>
+        <div class="col-xs-3"><p>3!</p></div>
+        <div class="col-xs-3"><p>3!</p></div>
+        <div class="col-xs-2"><p>2!</p></div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
