Add styles to visualize layout

--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -9,6 +9,7 @@
 
     <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <link href="starter-template.css" rel="stylesheet">
@@ -62,11 +63,11 @@
         </p>
       </div>
       <div class="row">
-        <div class="col-xs-1"><p>1!</p></div>
-        <div class="col-xs-2"><p>2!</p></div>
-        <div class="col-xs-3"><p>3!</p></div>
-        <div class="col-xs-3"><p>3!</p></div>
-        <div class="col-xs-2"><p>2!</p></div>
+        <div class="col-xs-1 layout-example"><p>1!</p></div>
+        <div class="col-xs-2 layout-example"><p>2!</p></div>
+        <div class="col-xs-3 layout-example"><p>3!</p></div>
+        <div class="col-xs-3 layout-example"><p>3!</p></div>
+        <div class="col-xs-2 layout-example"><p>2!</p></div>
       </div>
     </div>
 
