--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -69,6 +69,14 @@
         <div class="col-xs-3 layout-example"><p>3!</p></div>
         <div class="col-xs-2 layout-example"><p>2!</p></div>
       </div>
+
+      <h2>Crazy columns!</h2>
+      <div class="row">
+        <div class="layout-example col-xs-2 col-sm-5 col-md-7 col-lg-9 ">1!</div>
+        <div class="layout-example col-xs-3 col-sm-6 col-md-8 col-lg-10">2!</div>
+        <div class="layout-example col-xs-3          col-md-5 col-lg-11">3!</div>
+        <div class="layout-example col-xs-4          col-md-4 col-lg-12">4!</div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
