--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -77,6 +77,14 @@
         <div class="layout-example col-xs-3          col-md-5 col-lg-11">3!</div>
         <div class="layout-example col-xs-4          col-md-4 col-lg-12">4!</div>
       </div>
+
+      <h2>Clearfix!</h2>
+      <div class="row">
+        <div class="layout-example col-xs-6">1!<br/>with extra line</div>
+        <div class="layout-example col-xs-6">2!</div>
+        <div class="clearfix visible-xs-block"></div>
+        <div class="layout-example col-xs-6">3!</div>
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
