--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -85,6 +85,17 @@
         <div class="clearfix visible-xs-block"></div>
         <div class="layout-example col-xs-6">3!</div>
       </div>
+
+      <h2>Offsets!</h2>
+      <div class="row">
+        <div class="layout-example col-xs-8                ">0!</div>
+        <div class="layout-example col-xs-8 col-xs-offset-1">1!</div>
+        <div class="layout-example col-xs-8 col-xs-offset-2">2!</div>
+        <div class="layout-example col-xs-8 col-xs-offset-3">3!</div>
+        <div class="layout-example col-xs-8 col-xs-offset-4">4!</div>
+      </div>
+
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
