--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -95,6 +95,26 @@
         <div class="layout-example col-xs-8 col-xs-offset-4">4!</div>
       </div>
 
+      <h2>Nesting!</h2>
+      <div class="row">
+        <div class="layout-example col-xs-5">
+          <div class="row">
+            <div class="layout-example col-xs-1">1!</div>
+            <div class="layout-example col-xs-2">2!</div>
+          </div>
+          <div class="row">
+            <div class="layout-example col-xs-3">3!</div>
+            <div class="layout-example col-xs-4">4!</div>
+          </div>
+        </div>
+        <div class="layout-example col-xs-7">
+          <div class="row">
+            <div class="layout-example col-xs-5">5!</div>
+            <div class="layout-example col-xs-7">7!</div>
+          </div>
+        </div>
+      </div>
+
 
     </div>
 
