--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -115,6 +115,12 @@
         </div>
       </div>
 
+      <h1>Headings <small>woo!</small></h1>
+      <h2>Headings <small>woo!</small></h2>
+      <h3>Headings <small>woo!</small></h3>
+      <h4>Headings <small>woo!</small></h4>
+      <h5>Headings <small>woo!</small></h5>
+      <h6>Headings <small>woo!</small></h6>
 
     </div>
 
