--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -122,6 +122,12 @@
       <h5>Headings <small>woo!</small></h5>
       <h6>Headings <small>woo!</small></h6>
 
+
+      <h1>Alignment!</h1>
+      <p class="text-left">Left!</p>
+      <p class="text-center">Center!</p>
+      <p class="text-right">Right!</p>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
