--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -128,6 +128,10 @@
       <p class="text-center">Center!</p>
       <p class="text-right">Right!</p>
 
+
+      <h1>Text transformation</h1>
+      <p class="text-uppercase">every word in this paragraph should be upper-case!</p>
+      <p class="text-capitalize">every word in this paragraph should be capitalized!</p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
