--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -132,6 +132,14 @@
       <h1>Text transformation</h1>
       <p class="text-uppercase">every word in this paragraph should be upper-case!</p>
       <p class="text-capitalize">every word in this paragraph should be capitalized!</p>
+
+      <h1>Blockquotes!</h1>
+      <blockquote>
+        <p>I hope this quote will make me famous one day.</p>
+        <footer>Somebody not so famous</footer>
+      </blockquote>
+
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
