--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -139,6 +139,45 @@
         <footer>Somebody not so famous</footer>
       </blockquote>
 
+      <h1>Lists!</h1>
+
+      <h3>Ordered list</h3>
+      <ol>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+      </ol>
+
+      <h3>Unordered list</h3>
+      <ul>
+        <li>foo</li>
+        <li>bar</li>
+        <li>baz</li>
+      </ul>
+
+      <h3>Unstyled</h3>
+      <ol class="list-unstyled">
+        <li>a</li>
+        <li>b</li>
+        <li>c</li>
+        <li>d</li>
+      </ol>
+
+      <h3>Inline</h3>
+      <ul class="list-inline">
+        <li>Jack</li>
+        <li>Jill</li>
+        <li>Bojangles</li>
+      </ul>
+
+      <h3>Descriptions</h3>
+      <dl>
+        <dt>Classes</dt>
+        <dd>Objects or something</dd>
+        <dt>Interfaces</dt>
+        <dd>Contracts or something</dd>
+      </dl>
 
     </div>
 
