--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -179,6 +179,20 @@
         <dd>Contracts or something</dd>
       </dl>
 
+      <h1>Code!</h1>
+      <p>Don't forget to implement <code>IDisposable</code></p>
+
+      <p>To win, type <kbd>ctrl + alt + delete</kbd></p>
+
+      <pre>
+        var myFoo = 1;
+        myFoo++;
+        return myFoo;
+      </pre>
+
+      <p>Do you see the <var>myFoo</var> above?</p>
+
+      <samp>2</samp>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
