--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -193,6 +193,40 @@
       <p>Do you see the <var>myFoo</var> above?</p>
 
       <samp>2</samp>
+
+      <h1>Tables!</h1>
+
+      <table class="table table-striped table-bordered table-hover table-condensed">
+        <thead>
+          <tr>
+            <th>A</th><th>B</th><th>C</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>1</td><td>2</td><td>3</td>
+          </tr>
+          <tr>
+            <td>4</td><td>5</td><td>6</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr><th>Foo</th><th>Bar</th><th>Baz</th><th>Bat</th><th>Ball</th></tr>
+          </thead>
+          <tbody>
+            <tr><td>hello world</td><td>this table has long content</td><td>and is set up</td><td>to be</td><td>responsive!</td></tr>
+            <tr><td>hello world</td><td>this table has long content</td><td>and is set up</td><td>to be</td><td>responsive!</td></tr>
+            <tr><td>hello world</td><td>this table has long content</td><td>and is set up</td><td>to be</td><td>responsive!</td></tr>
+            <tr><td>hello world</td><td>this table has long content</td><td>and is set up</td><td>to be</td><td>responsive!</td></tr>
+          </tbody>
+        </table>
+      </div>
+
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
