--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -311,6 +311,29 @@
         </div>
       </form>
 
+      <h1>Buttons!</h1>
+      <a class="btn btn-default" role="button">Go here!</a>
+      <button class="btn btn-default" type="submit">No, here!</button>
+      <input class="btn btn-default" type="button" value="Click me!">
+      <div class="clearfix"></div>
+
+      <button class="btn btn-default">Default</button>
+      <button class="btn btn-primary">Primry</button>
+      <button class="btn btn-success">Success</button>
+      <button class="btn btn-info">Info</button>
+      <button class="btn btn-warning">Warning</button>
+      <button class="btn btn-danger">Danger</button>
+      <button class="btn btn-link">Link</button>
+      <div class="clearfix"></div>
+
+      <button class="btn btn-lg">Large</button>
+      <button class="btn btn-sm">Small</button>
+      <button class="btn btn-xs">Extra-small</button>
+      <div class="clearfix"></div>
+
+      <button class="button btn-primary btn-block">Block button</button>
+      <button class="button btn-default" disabled="disabled">Disabled</button>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
