--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -334,6 +334,15 @@
       <button class="button btn-primary btn-block">Block button</button>
       <button class="button btn-default" disabled="disabled">Disabled</button>
 
+
+      <h1>Images!</h1>
+      <img src="sailboat.png" class="img-responsive center-block">
+      <br />
+      <div class="row">
+        <img src="sailboat.png" class="col-xs-4 img-rounded">
+        <img src="sailboat.png" class="col-xs-4 img-circle">
+        <img src="sailboat.png" class="col-xs-4 img-thumbnail">
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
