--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -343,6 +343,22 @@
         <img src="sailboat.png" class="col-xs-4 img-circle">
         <img src="sailboat.png" class="col-xs-4 img-thumbnail">
       </div>
+
+
+      <h1>Colors!</h1>
+      <p class="text-muted">I am feeling very muted.</p>
+      <p class="text-primary">I am feeling very primary.</p>
+      <p class="text-success">I am feeling very successful.</p>
+      <p class="text-info">I am feeling very informational.</p>
+      <p class="text-warning">I am feeling very warned.</p>
+      <p class="text-danger">I am feeling very dangeroso.</p>
+      <br />
+
+      <p class="bg-primary">I am feeling very primary.</p>
+      <p class="bg-success">I am feeling very successful.</p>
+      <p class="bg-info">I am feeling very informational.</p>
+      <p class="bg-warning">I am feeling very warned.</p>
+      <p class="bg-danger">I am feeling very dangeroso.</p>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
