--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -317,22 +317,22 @@
       <input class="btn btn-default" type="button" value="Click me!">
       <div class="clearfix"></div>
 
-      <button class="btn btn-default">Default</button>
-      <button class="btn btn-primary">Primry</button>
-      <button class="btn btn-success">Success</button>
-      <button class="btn btn-info">Info</button>
-      <button class="btn btn-warning">Warning</button>
-      <button class="btn btn-danger">Danger</button>
-      <button class="btn btn-link">Link</button>
+      <button type="button" class="btn btn-default">Default</button>
+      <button type="button" class="btn btn-primary">Primry</button>
+      <button type="button" class="btn btn-success">Success</button>
+      <button type="button" class="btn btn-info">Info</button>
+      <button type="button" class="btn btn-warning">Warning</button>
+      <button type="button" class="btn btn-danger">Danger</button>
+      <button type="button" class="btn btn-link">Link</button>
       <div class="clearfix"></div>
 
-      <button class="btn btn-lg">Large</button>
-      <button class="btn btn-sm">Small</button>
-      <button class="btn btn-xs">Extra-small</button>
+      <button type="button" class="btn btn-lg">Large</button>
+      <button type="button" class="btn btn-sm">Small</button>
+      <button type="button" class="btn btn-xs">Extra-small</button>
       <div class="clearfix"></div>
 
-      <button class="button btn-primary btn-block">Block button</button>
-      <button class="button btn-default" disabled="disabled">Disabled</button>
+      <button type="button" class="button btn-primary btn-block">Block button</button>
+      <button type="button" class="button btn-default" disabled="disabled">Disabled</button>
 
 
       <h1>Images!</h1>
@@ -359,6 +359,10 @@
       <p class="bg-info">I am feeling very informational.</p>
       <p class="bg-warning">I am feeling very warned.</p>
       <p class="bg-danger">I am feeling very dangeroso.</p>
+
+      <h1>Icons!</h1>
+      <button type="button" class="close pull-left">&times; Close me!</button>
+      <a class="btn btn-link"><span class="caret"></span>Drop me down!</a>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
