--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -363,6 +363,11 @@
       <h1>Icons!</h1>
       <button type="button" class="close pull-left">&times; Close me!</button>
       <a class="btn btn-link"><span class="caret"></span>Drop me down!</a>
+
+      <h1>Alignment!</h1>
+      <div class="row"><div class="pull-left">Left!</div></div>
+      <div class="row"><div class="center-block" style="width:100px">Center!</div></div>
+      <div class="row"><div class="pull-right">Right!</div></div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
