--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -365,9 +365,15 @@
       <a class="btn btn-link"><span class="caret"></span>Drop me down!</a>
 
       <h1>Alignment!</h1>
-      <div class="row"><div class="pull-left">Left!</div></div>
-      <div class="row"><div class="center-block" style="width:100px">Center!</div></div>
-      <div class="row"><div class="pull-right">Right!</div></div>
+      <div class="pull-left">Left!</div>
+      <div class="center-block" style="width:100px">Center!</div>
+      <div class="pull-right">Right!</div>
+
+
+      <h1>Hiding!</h1>
+      <button type="button" class="button"><span class="show">I'm shown!</span></button>
+      <button type="button" class="button"><span class="hidden">I'm hidden!</span></button>
+      <button type="button" class="button"><span class="invisible">I'm invisible!!</span></button>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
