--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -374,6 +374,23 @@
       <button type="button" class="button"><span class="show">I'm shown!</span></button>
       <button type="button" class="button"><span class="hidden">I'm hidden!</span></button>
       <button type="button" class="button"><span class="invisible">I'm invisible!!</span></button>
+
+      <h1>Glyphicons!</h1>
+      <span class="glyphicon glyphicon-cd"></span>
+      <span class="glyphicon glyphicon-th"></span>
+      <span class="glyphicon glyphicon-ok"></span>
+      <span class="glyphicon glyphicon-btc"></span>
+      <span class="glyphicon glyphicon-xbt"></span>
+      <span class="glyphicon glyphicon-yen"></span>
+      <span class="glyphicon glyphicon-tag"></span>
+      <button type="button" class="btn btn-default btn-large">
+        <span class="glyphicon glyphicon-star"></span> Favorite!
+      </button>
+
+      <div class="alert alert-danger" role="alert">
+        <span class="glyphicon glyphicon-alert"></span>
+        Something is wrong on the internet!
+      </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
