--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -391,6 +391,24 @@
         <span class="glyphicon glyphicon-alert"></span>
         Something is wrong on the internet!
       </div>
+
+
+      <h1>Dropdowns!</h1>
+      <div class="dropdown">
+        <button class="btn btn-default dropdown-toggle" type="button" id="myFirstDropdown" data-toggle="dropdown">
+          My first dropdown
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a>Dropdown select 1</a></li>
+          <li class="dropdown-header">This is a sweet, sweet header</li>
+          <li><a>No, pick me!</a></li>
+          <li role="separator" class="divider"></li>
+          <li><a href="#">This one is actually a link</a></li>
+          <li class="disabled"><a href="#">Can't select this one :(</a></li>
+        </ul>
+      </div>
+
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
