--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -334,6 +334,41 @@
       <button type="button" class="button btn-primary btn-block">Block button</button>
       <button type="button" class="button btn-default" disabled="disabled">Disabled</button>
 
+      <div class="btn-group-vertical" role="group">
+        <button type="button" class="btn btn-default">Group</button>
+        <button type="button" class="btn btn-default">of</button>
+        <button type="button" class="btn btn-default">buttons!</button>
+      </div>
+
+      <div class="btn-toolbar" role="toolbar">
+        <div class="btn-group" role="group">
+          <button type="button" class="btn btn-default">Button</button>
+          <button type="button" class="btn btn-default">Group 1</button>
+          <div class="btn-group" role="group">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
+              Dropdown menu! <span class="caret"></span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="#">Link 1</a></li>
+              <li><a href="#">Link 2</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="btn-group btn-group-lg" role="group">
+          <button type="button" class="btn btn-default">Button</button>
+          <button type="button" class="btn btn-default">Group 2</button>
+        </div>
+      </div>
+
+      <div class="btn-group">
+        <button type="button" class="btn btn-primary">Split-button!</button>
+        <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" haspopup="true">
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">Link</a></li>
+        </ul>
+      </div>
 
       <h1>Images!</h1>
       <img src="sailboat.png" class="img-responsive center-block">
