--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -250,8 +250,13 @@
           </div>
         </div>
         <div class="form-group">
-          <label for="fileUpload">Give me yo files!</label>
-          <input type="file" id="fileUpload">
+          <div class="input-group">
+            <label for="fileUpload">Give me yo files!</label>
+            <span class="input-group-addon">
+              <input type="checkbox">
+            </span>
+            <input type="file" id="fileUpload">
+          </div>
         </div>
         <div class="form-group">
           <label for="stealTime">When should I steal all the things?</label>
