--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -472,6 +472,14 @@
         <li role="presentation" class="disabled"><a href="#">Kansas</a></li>
       </ul>
 
+      <h1>Breadcrumbs!</h1>
+      <ol class="breadcrumb">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Files</a></li>
+        <li><a href="#">My Stuff</a></li>
+        <li class="active">Top Secret Goodies!</li>
+      </ol>
+
     </div>
 
 
