--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -480,6 +480,25 @@
         <li class="active">Top Secret Goodies!</li>
       </ol>
 
+      <h1>Pagination!</h1>
+      <nav>
+        <ul class="pagination">
+          <li class="disabled"><a href="#"><span>&laquo;</span></a></li>
+          <li class="active"><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#"><span>&raquo;</span></a></li>
+        </ul>
+      </nav>
+
+      <nav>
+        <ul class="pager">
+          <li class="previous"><a href="#">Prev</a></li>
+          <li class="next"><a href="#">Next</a></li>
+        </ul>
+      </nav>
+
     </div>
 
 
