--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -499,6 +499,12 @@
         </ul>
       </nav>
 
+      <h1>Labels! <span class="label label-default">New</span></h1>
+      <h2>Labels! <span class="label label-primary">New</span></h2>
+      <h3>Labels! <span class="label label-success">New</span></h3>
+      <h4>Labels! <span class="label label-info">New</span></h4>
+      <h5>Labels! <span class="label label-warning">New</span></h5>
+
     </div>
 
 
