--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -505,6 +505,13 @@
       <h4>Labels! <span class="label label-info">New</span></h4>
       <h5>Labels! <span class="label label-warning">New</span></h5>
 
+      <h1>Badges!</h1>
+      <a href="#">Notifications <span class="badge">1million</span></a>
+      <div class="clearfix"></div>
+      <button class="btn btn-danger" type="button">
+        Alerts <span class="badge">6</span>
+      </button>
+
     </div>
 
 
