--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -512,6 +512,17 @@
         Alerts <span class="badge">6</span>
       </button>
 
+
+      <div class="jumbotron">
+        <h1>Jumbotron</h1>
+        <p>This is my headline, hear me roar!</p>
+        <p><a class="btn btn-primary btn-lg" href="#" role="button">Attack</a></p>
+      </div>
+
+      <div class="page-header">
+        <h1>My First Header <small>isn't it nice?</small></h1>
+      </div>
+
     </div>
 
 
