--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -523,6 +523,15 @@
         <h1>My First Header <small>isn't it nice?</small></h1>
       </div>
 
+
+      <h1>Alerts!</h1>
+      <div class="alert alert-success" role="alert">oh snap!</div>
+      <div class="alert alert-info" role="alert">oh snap!</div>
+      <div class="alert alert-warning" role="alert">oh snap!</div>
+      <div class="alert alert-danger alert-dismissible" role="alert">
+        <button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
+        oh <a href="#" class="alert-link">snap!</a>
+      </div>
     </div>
 
 
