--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -532,6 +532,12 @@
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
         oh <a href="#" class="alert-link">snap!</a>
       </div>
+
+
+      <h1>Progress!</h1>
+      <div class="progress">
+        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" style="width:40%;">Workin' on it!</div>        
+      </div>
     </div>
 
 
