--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -536,8 +536,21 @@
 
       <h1>Progress!</h1>
       <div class="progress">
-        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" style="width:40%;">Workin' on it!</div>        
+        <div class="progress-bar progress-bar-danger progress-bar-striped active" role="progressbar" style="width:40%;">Workin' on it!</div>
       </div>
+
+
+      <h1>Media!</h1>
+      <div class="media">
+        <div class="media-left media-top">
+          <a href="#"><img class="media-object" src="sailboat.png" style="width:96px; height:54px;"></a>
+        </div>
+        <div class="media-body">
+          <h2 class="media-heading">Sailboats!</h2>
+          Have you ever seen such a majestic boat?
+        </div>
+      </div>
+
     </div>
 
 
