--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -551,6 +551,13 @@
         </div>
       </div>
 
+      <h1>List groups!</h1>
+      <div class="list-group">
+        <a href="#" class="list-group-item active">A<span class="badge">New!</span></a>
+        <a href="#" class="list-group-item disabled">B</a>
+        <a href="#" class="list-group-item">C</a>
+      </div>
+
     </div>
 
 
