--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -558,6 +558,20 @@
         <a href="#" class="list-group-item">C</a>
       </div>
 
+
+      <h1>Panels!</h1>
+      <div class="panel panel-warning">
+        <div class="panel-heading">
+          <h3 class="panel-title">My Firs Panel</h3>
+        </div>
+        <div class="panel-body">
+          Hello, world. This is my panel content.
+        </div>
+        <div class="panel-footer">
+          by Scott
+        </div>
+      </div>
+
     </div>
 
 
