--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -572,6 +572,34 @@
         </div>
       </div>
 
+      <h1>Wells!</h1>
+      <div class="well well-sm">
+        I'm stuck in a well!
+      </div>
+
+
+      <h1>Modals!</h1>
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Launch!</button>
+    </div>
+
+
+    <!-- Modals! -->
+    <div class="modal fade" id="myModal" role="dialog" tabindex="-1">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
+            <h4 class="modal-title">Hey, check it out!</h4>
+          </div>
+          <div class="modal-body">
+            Dear user, I hope you this modal finds you well..
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save</button>
+          </div>
+        </div>
+      </div>
     </div>
 
 
