--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -15,41 +15,43 @@
     <link href="starter-template.css" rel="stylesheet">
   </head>
 
-  <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-            data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Hello, Bootstrap!</a>
+  <body data-spy="scroll" data-target="#myNav">
+    <div id="myNav">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+              data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Hello, Bootstrap!</a>
+          </div>
+          <div id="navbar" class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#home">Home</a></li>
+              <li><a href="#crazyColumns">Crazy Columns</a></li>
+              <li><a href="#clearfix">Clearfix</a></li>
+              <li class="dropdown">
+                <a id="dropdown1" data-target="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
+                  aria-haspopup="true" aria-expanded="false">Dropdown 2.0 <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else!</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li class="dropdown-header">Another header!</li>
+                  <li><a href="#">A link</a></li>
+                  <li><a href="#">Another link</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a id="dropdown1" data-target="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                aria-haspopup="true" aria-expanded="false">Dropdown 2.0 <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else!</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Another header!</li>
-                <li><a href="#">A link</a></li>
-                <li><a href="#">Another link</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
 
     <div class="container">
       <div class="jumbotron">
@@ -57,7 +59,7 @@
       </div>
 
       <div class="starter-template">
-        <h1>Hello, Bootstrap!</h1>
+        <h1 id="home">Hello, Bootstrap!</h1>
         <p class="lead">
           This is a sample paragraph citing how awesome bootstrap is, etc.
         </p>
@@ -70,7 +72,7 @@
         <div class="col-xs-2 layout-example"><p>2!</p></div>
       </div>
 
-      <h2>Crazy columns!</h2>
+      <h2 id="crazyColumns">Crazy columns!</h2>
       <div class="row">
         <div class="layout-example col-xs-2 col-sm-5 col-md-7 col-lg-9 ">1!</div>
         <div class="layout-example col-xs-3 col-sm-6 col-md-8 col-lg-10">2!</div>
@@ -78,7 +80,7 @@
         <div class="layout-example col-xs-4          col-md-4 col-lg-12">4!</div>
       </div>
 
-      <h2>Clearfix!</h2>
+      <h2 id="clearfix">Clearfix!</h2>
       <div class="row">
         <div class="layout-example col-xs-6">1!<br/>with extra line</div>
         <div class="layout-example col-xs-6">2!</div>
