--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -530,7 +530,7 @@
       <div class="alert alert-success" role="alert">oh snap!</div>
       <div class="alert alert-info" role="alert">oh snap!</div>
       <div class="alert alert-warning" role="alert">oh snap!</div>
-      <div class="alert alert-danger alert-dismissible" role="alert">
+      <div class="alert alert-danger alert-dismissible fade in" role="alert">
         <button type="button" class="close" data-dismiss="alert"><span>&times;</span></button>
         oh <a href="#" class="alert-link">snap!</a>
       </div>
