--- a/bootstrap/myFirstHomepage/index.html
+++ b/bootstrap/myFirstHomepage/index.html
@@ -377,6 +377,21 @@
         </ul>
       </div>
 
+      <div class="clearfix" />
+      <button type="button" class="btn btn-lg btn-info" data-toggle="button" autocomplete="false">Togglable!</button>
+
+      <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-primary active"><input type="checkbox" autocomplete="false" checked>Dogs</label>
+        <label class="btn btn-primary"><input type="checkbox" autocomplete="false">Cats</label>
+        <label class="btn btn-primary"><input type="checkbox" autocomplete="false">Smurfs</label>
+      </div>
+
+      <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-danger active"><input type="radio" autocomplete="false" checked>Lions</label>
+        <label class="btn btn-danger"><input type="radio" autocomplete="false">Tigers</label>
+        <label class="btn btn-danger"><input type="radio" autocomplete="false">Bears</label>
+      </div>
+
       <h1>Images!</h1>
       <img src="sailboat.png" class="img-responsive center-block">
       <br />
