--- a/font-awesome/index.html
+++ b/font-awesome/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   </head>
+    <i class="fa fa-camera-retro"></i> camera-retro!
 
   <body>
 
