--- a/font-awesome/index.html
+++ b/font-awesome/index.html
@@ -10,8 +10,17 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   </head>
+    <h1>Icons!</h1>
     <i class="fa fa-camera-retro"></i> camera-retro!
 
+
+    <h1>Sizes!</h1>
+    <i class="fa fa-camera-retro"></i>normal
+    <i class="fa fa-camera-retro fa-lg"></i>lg
+    <i class="fa fa-camera-retro fa-2x"></i>2x
+    <i class="fa fa-camera-retro fa-3x"></i>3x
+    <i class="fa fa-camera-retro fa-4x"></i>4x
+    <i class="fa fa-camera-retro fa-5x"></i>5x
   <body>
 
   </body>
