Add fixed width icons

--- a/font-awesome/index.html
+++ b/font-awesome/index.html
@@ -13,18 +13,27 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
   </head>
-    <h1>Icons!</h1>
-    <i class="fa fa-camera-retro"></i> camera-retro!
-
-
-    <h1>Sizes!</h1>
-    <i class="fa fa-camera-retro"></i>normal
-    <i class="fa fa-camera-retro fa-lg"></i>lg
-    <i class="fa fa-camera-retro fa-2x"></i>2x
-    <i class="fa fa-camera-retro fa-3x"></i>3x
-    <i class="fa fa-camera-retro fa-4x"></i>4x
-    <i class="fa fa-camera-retro fa-5x"></i>5x
   <body>
+    <div class="container">
+      <h1>Icons!</h1>
+      <i class="fa fa-camera-retro"></i> camera-retro!
+
+
+      <h1>Sizes!</h1>
+      <i class="fa fa-camera-retro"></i>normal
+      <i class="fa fa-camera-retro fa-lg"></i>lg
+      <i class="fa fa-camera-retro fa-2x"></i>2x
+      <i class="fa fa-camera-retro fa-3x"></i>3x
+      <i class="fa fa-camera-retro fa-4x"></i>4x
+      <i class="fa fa-camera-retro fa-5x"></i>5x
+
+      <h1>Fixed width!</h1>
+      <div class="list-group">
+        <a class="list-group-item" href="#"><i class="fa fa-home fa-fw"></i> &nbsp; Item 1</a>
+        <a class="list-group-item" href="#"><i class="fa fa-phone fa-fw"></i> &nbsp; Item 2</a>
+        <a class="list-group-item" href="#"><i class="fa fa-eye fa-fw"></i> &nbsp; Item 3</a>
+      </div>
+  </div>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
