Add bootstrap exampleS

--- a/font-awesome/index.html
+++ b/font-awesome/index.html
@@ -33,6 +33,16 @@
         <a class="list-group-item" href="#"><i class="fa fa-phone fa-fw"></i> &nbsp; Item 2</a>
         <a class="list-group-item" href="#"><i class="fa fa-eye fa-fw"></i> &nbsp; Item 3</a>
       </div>
+
+      <h1>Lists!</h1>
+      <ul class="fa-ul">
+        <li><i class="fa-li fa fa-eye"></i>Item 1</li>
+        <li><i class="fa-li fa fa-eye"></i>Item 2</li>
+        <li><i class="fa-li fa fa-eye"></i>Item 3</li>
+      </ul>
+
+      <h1>Bootstrap!</h1>
+      <a class="btn btn-danger" href="#"><i class="fa fa-trash-o fa-lg"></i> Delete</a>
   </div>
 
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
