--- a/font-awesome/index.html
+++ b/font-awesome/index.html
@@ -16,7 +16,11 @@
   <body>
     <div class="container">
       <h1>Icons!</h1>
-      <i class="fa fa-camera-retro"></i> camera-retro!
+      <i class="fa fa-camera-retro"></i>
+      <i class="fa fa-500px"></i>
+      <i class="fa fa-battery-0"></i>
+      <i class="fa fa-battery-3"></i>
+      <i class="fa fa-amazon"></i>
 
 
       <h1>Sizes!</h1>
