Add build script

--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>My First D3 Page</title>
   </head>
   <body>
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
