--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="app.js"></script>
   </body>
 </html>
