Use D3 to select many elements

--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -4,6 +4,18 @@
     <title>My First D3 Page</title>
   </head>
   <body>
+    <section>
+      <h3>Section 1</h3>
+    </section>
+
+    <section>
+      <h3>Section 2</h3>
+    </section>
+
+    <section>
+      <h3>Section 3</h3>
+    </section>
+
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="app.js"></script>
