Add jshint linting

--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>My First D3 Page</title>
+
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
     <section>
