Manual bar chart

--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -6,6 +6,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <h1>Selectors!</h1>
     <section>
       <h3>Section 1</h3>
     </section>
@@ -17,6 +18,16 @@
     <section>
       <h3>Section 3</h3>
     </section>
+
+    <h1>Manual Bar Chart</h1>
+    <div class="chart">
+      <div style="width: 40px;">4</div>
+      <div style="width: 30px;">3</div>
+      <div style="width: 10px;">1</div>
+      <div style="width: 60px;">6</div>
+      <div style="width: 100px;">10</div>
+      <div style="width: 50px;">5</div>
+    </div>
 
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
