--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -32,6 +32,27 @@
     <h1>Generated Bar Chart</h1>
     <div id="generatedBarChart" class="chart"></div>
 
+    <h1>Manual SVG Bar Chart</h1>
+    <svg class="chart" width="420" height="120">
+      <g transform="translate(0,0)">
+        <rect width="40" height="19"></rect>
+        <text x="37" y="9.5" dy=".35em">4</text>
+      </g>
+      <g transform="translate(0,20)">
+        <rect width="80" height="19"></rect>
+        <text x="77" y="9.5" dy=".35em">8</text>
+      </g>
+      <g transform="translate(0,40)">
+        <rect width="70" height="19"></rect>
+        <text x="67" y="9.5" dy=".35em">7</text>
+      </g>
+      <g transform="translate(0,60)">
+        <rect width="20" height="19"></rect>
+        <text x="17" y="9.5" dy=".35em">2</text>
+      </g>
+    </svg>
+
+
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
     <script src="app.js"></script>
