--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -52,6 +52,10 @@
       </g>
     </svg>
 
+    <h1>Generated SVG Bar Chart</h1>
+    <div id="generatedSvgBarChart"></div>
+
+
 
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
