Load data from an external resource

--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -53,7 +53,7 @@
     </svg>
 
     <h1>Generated SVG Bar Chart</h1>
-    <div id="generatedSvgBarChart"></div>
+    <svg id="generatedSvgBarChart" class="chart"></svg>
 
 
 
