SVG column bar plot

--- a/d3/bar/index.html
+++ b/d3/bar/index.html
@@ -55,6 +55,9 @@
     <h1>Generated SVG Bar Chart</h1>
     <svg id="generatedSvgBarChart" class="chart"></svg>
 
+    <h1>Generated SVG Column Chart</h1>
+    <svg id="generatedSvgColumnChart" class="chart"></svg>
+
 
 
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
