Dynamically load circles

--- a/d3/circles/index.html
+++ b/d3/circles/index.html
@@ -4,11 +4,7 @@
     <title>My Second D3 Page</title>
   </head>
   <body>
-    <svg width="720" height="120">
-      <circle cx="40" cy="60" r="10"></circle>
-      <circle cx="80" cy="60" r="10"></circle>
-      <circle cx="120" cy="60" r="10"></circle>
-    </svg>
+    <svg width="720" height="120" id="circle-demo"></svg>
 
     <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
